# hermes-generic-messaging

./: .dockerignore  .gitignore  Plan.md  README.md  pyproject.toml  setup.py
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  README.md  custom_chat.md  dependency-management.md  interface_contract.md  web-app.md
docs/examples/: custom-chat-events-v1.json
docs/plans/: multi-chat-sessions-web-ui.md  path-discovery.md  universal-platform-adapter-v1.md
planning/coordination/: WORKLOG.md
scripts/: apply-hermes-session-meta-patch.sh  bootstrap-venv.sh  dev.sh  upgrade-hermes-session-meta-patch.sh
tests/: conftest.py
tests/plugins/custom_chat/: conftest.py  test_adapter.py  test_cancel.py  test_client_register.py  test_commands.py  test_config.py  test_custom_chat_e2e.py  test_hardening.py  test_inbound_message_attachments.py  test_interrupt.py  test_media.py  test_model_picker.py  test_notice_image_typing.py  test_publish_local_file.py  test_session_meta.py  test_slash_confirm.py  test_slash_options.py  test_streaming.py
tests/web/: test_bff_auth.py  test_client_register.py  test_diagnostics_api.py  test_enrich.py  test_health_api.py  test_media_store.py  test_network.py  test_session_store.py
web/: .env.example  Dockerfile.bff  README.md  docker-compose.yml
web/backend/: log_config.yaml
web/backend/app/: __init__.py  main.py
web/backend/app/api/: diagnostics.py  health.py  media.py  sessions.py
web/backend/app/core/: auth.py  config.py  network.py
web/backend/app/services/: media_store.py  session_store.py
web/backend/app/ws/: chat_proxy.py
web/backend/tests/: test_chat_proxy.py
web/frontend/: .env.local  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/frontend/.playwright-cli/: page-2026-07-04T10-56-02-588Z.yml  page-2026-07-04T12-20-56-015Z.yml  page-2026-07-06T06-47-17-753Z.yml  page-2026-07-06T06-47-37-148Z.yml  page-2026-07-06T07-15-22-982Z.yml
web/frontend/scripts/: check-layout-invariants.mjs  check-premium-cascade.mjs
web/frontend/src/: App.tsx  main.tsx  vite-env.d.ts
web/frontend/src/api/: bffAuth.test.ts  bffAuth.ts  diagnosticsClient.ts  mediaClient.ts  sessionClient.test.ts  sessionClient.ts  wsClient.test.ts  wsClient.ts
web/frontend/src/components/: StatusBar.tsx
web/frontend/src/hooks/: useAudioRecorder.ts  useComposerClearance.ts  useConnectionStore.ts  useDraftStore.ts  useKeyboardInset.test.ts  useKeyboardInset.ts  useKeyboardShortcuts.ts  (+6 more)
(+92 files in other folders)
